--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Movie‑TV Show Recommender</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg'><text y='32' font-size='32'>🎬</text></svg>">
 </head>
 
 <body>
@@ -107,5 +108,6 @@
     </div>
   </div>
 <script src="index.js"></script>
+<footer>Movie suggestions use Gemini and posters use TMDb; user inputs may be retained by Gemini, and TMDb may track usage.</footer>
 </body>
 </html>
