--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
     </div>
   </div>
 <script src="index.js"></script>
-<footer>Movie suggestions use Gemini and posters use TMDb; user inputs may be retained by Gemini, and TMDb may track usage.</footer>
+<footer>This is a personal project. User input is sent to Gemini for recommendations, and movie titles are used to fetch posters from TMDb. Please refer to Gemini and TMDb policies for how your data is handled.</footer>
 </body>
 </html>
